test bazel macro

--- a/animal/BUILD
+++ b/animal/BUILD
@@ -28,6 +28,7 @@ cc_library(
         "dog.h",
         ":animal_cc_proto",
     ],
+    linkstatic = False,
     visibility = ["//visibility:public"],
 )
 
