--- a/starlark/BUILD
+++ b/starlark/BUILD
@@ -1,4 +1,5 @@
 load("//starlark:file.bzl", "copy_file", "create_file")
+load("//starlark:get_pwd.bzl", "get_pwd")
 
 copy_file(
     name = "new_file",
@@ -13,4 +14,8 @@ cc_binary(
 create_file(
     name = "test_file",
     txt = "hello this test!!!",
+)
+
+get_pwd(
+    name = "test_get_pwd",
 )
